--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,93 +1,135 @@
 <% layout('layout/boiler') -%>
 <body >
-    <div class="nav-belt ">
-    <div id="filters" class="mt-3 padding-all" >
-        <div class="filter " >
-            <a href="/listings/filter/Trending" class="text-dark">
-               <div class="text-center"><i class="fa-solid fa-fire"></i></div>
-               <p class="filter-p" >Trending</p>
-            </a>
-        </div>
-        <div class="filter ">
-            <a href="/listings/filter/Rooms" class="text-dark">
-                <div class="text-center"><i class="fa fa-bed" aria-hidden="true"></i></div>
-                <p class="filter-p">rooms</p>
-            </a>
-        </div>
-        <div class="filter  ">
-            <a href="/listings/filter/Farms" class="text-dark">
-                <div class="text-center"><i class="fa-solid fa-cow"></i></div>
-                <p class="filter-p">Farms</p>
-            </a>
-        </div>
-        <div class="filter ">
-            <a href="/listings/filter/Arctic" class="text-dark">
-                <div class="text-center"><i class="fa-brands fa-galactic-republic"></i></div>
-                <p>Arctic</p>
-            </a>
-        </div>
-        <div class="filter">
-            <a href="/listings/filter/Beach" class="text-dark">
-                <div class="text-center"><i class="fa-solid fa-umbrella-beach"></i></div>
-                <p>Beach</p>
-            </a>
-        </div>
-        <div class="filter hide">
-            <a href="/listings/filter/Castles" class="text-dark">
-                <div class="text-center"><i class="fa-brands fa-fort-awesome"></i></div>
-                <p>castles</p>
-            </a>
-        </div>
-        <div class="filter hide" >
-            <a href="/listings/filter/Amazing Pools" class="text-dark">
-                <div class="text-center"><i class="fa-solid fa-person-swimming"></i></div>
-                <p>Amazing pools</p>
-            </a>
-        </div>
-        <div class="filter hide">
-            <a href="/listings/filter/Mountain" class="text-dark">
-                <div class="text-center"><i class="fa-solid fa-mountain-city"></i></div>
-                <p>mountain</p>
-            </a>
-        </div>
-        <div class="filter hide ">
-            <a href="/listings/filter/Lake" class="text-dark">
-                <div class="text-center"><i class="fa-solid fa-water"></i></div>
-                <p>Lake</p>
-            </a>
-        </div>
-        <div class="filter  hide " >
-            <a href="/listings/filter/Camping" class="text-dark">
-                <div class="text-center"><i class="fa-solid fa-campground"></i></div>
-                <p>Camping</p>
-            </a>
+    <div class="nav-belt m-3 p-3 mt-0 ">
+        <div class="nav_swiper">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              
+                <div class="swiper-slide">
+                    <div class="filter " >
+                        <a href="/listings/filter/Trending" class="text-dark">
+                            <div class="text-center"><i class="fa-solid fa-fire"></i></div>
+                            <p class="filter-p" >Trending</p>
+                        </a>
+                    </div>
+                   <div class="filter ">
+                        <a href="/listings/filter/Rooms" class="text-dark">
+                            <div class="text-center"><i class="fa fa-bed" aria-hidden="true"></i></div>
+                            <p class="filter-p">rooms</p>
+                        </a>
+                    </div>
+                    <div class="filter  ">
+                        <a href="/listings/filter/Farms" class="text-dark">
+                            <div class="text-center"><i class="fa-solid fa-cow"></i></div>
+                            <p class="filter-p">Farms</p>
+                        </a>
+                    </div>
+                    <div class="filter ">
+                        <a href="/listings/filter/Arctic" class="text-dark">
+                            <div class="text-center"><i class="fa-brands fa-galactic-republic"></i></div>
+                            <p>Arctic</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <a href="/listings/filter/Beach" class="text-dark">
+                            <div class="text-center"><i class="fa-solid fa-umbrella-beach"></i></div>
+                            <p>Beach</p>
+                        </a>
+                    </div>
+                </div> 
 
+                <div class="swiper-slide">
+                    <div class="filter ">
+                        <a href="/listings/filter/Castles" class="text-dark">
+                            <div class="text-center"><i class="fa-brands fa-fort-awesome"></i></div>
+                            <p>castles</p>
+                        </a>
+                    </div>
+                    <div class="filter " >
+                        <a href="/listings/filter/Amazing Pools" class="text-dark">
+                            <div class="text-center"><i class="fa-solid fa-person-swimming"></i></div>
+                            <p>Amazing pools</p>
+                        </a>
+                    </div>
+                    <div class="filter ">
+                        <a href="/listings/filter/Mountain" class="text-dark">
+                            <div class="text-center"><i class="fa-solid fa-mountain-city"></i></div>
+                            <p>mountain</p>
+                        </a>
+                    </div>
+                    <div class="filter  ">
+                        <a href="/listings/filter/Lake" class="text-dark">
+                            <div class="text-center"><i class="fa-solid fa-water"></i></div>
+                            <p>Lake</p>
+                        </a>
+                    </div>
+                    <div class="filter   " >
+                        <a href="/listings/filter/Camping" class="text-dark">
+                            <div class="text-center"><i class="fa-solid fa-campground"></i></div>
+                            <p>Camping</p>
+                        </a>
+            
+                    </div>
+                </div>
+                
+                <div class="swiper-slide">
+                    <div class="filter hide">
+                        <div class="text-center"><i class="fa-solid fa-igloo"></i></div>
+                        <p>Domes</p>
+                    </div>
+                   <div class="filter ">
+                        <a href="/listings/filter/New" class="text-dark">
+                            <div class="text-center"><i class="fa-solid fa-key"></i></i></div>
+                            <p class="filter-p">new</p>
+                        </a>
+                    </div>
+                    <div class="filter  ">
+                        <a href="/listings/filter/Ski-in" class="text-dark">
+                            <div class="text-center"><i class="fa-solid fa-person-skating"></i></div>
+                            <p class="filter-p">ski-in/out</p>
+                        </a>
+                    </div>
+                    <div class="filter  ">
+                        <a href="/listings/filter/Towers" class="text-dark">
+                            <div class="text-center"><i class="fa-solid fa-tower-observation"></i></div>
+                            <p class="filter-p">Towers</p>
+                        </a>
+                    </div>
+                    <div class="filter ">
+                        <a href="/listings/filter/Chef's" class="text-dark">
+                            <div class="text-center"><<i class="fa-solid fa-kitchen-set"></i></div>
+                            <p class="filter-p">kitchens</p>
+                        </a>
+                    </div>
+                </div> 
+
+            </div>
+            <div class="swiper-pagination"></div>
         </div>
-        <div class="filter hide">
-            <div class="text-center"><i class="fa-solid fa-igloo"></i></div>
-            <p>Domes</p>
         </div>
 
-    </div>
-    <div class="tax-toggle " >
-        <div class="form-check-reverse form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label font-8" for="flexSwitchCheckDefault">&nbsp; &nbsp; Display total before taxes </label>
-          </div>
-    </div>
+        <div class="tax-toggle " >
+            <div class="form-check-reverse form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <label class="form-check-label font-8" for="flexSwitchCheckDefault">&nbsp; &nbsp; Display total before taxes </label>
+            </div>
+        </div>
     </div>
 
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 padding-all ">
+    <div class="row row-cols-lg-4  row-cols-md-2 row-cols-sm-1 m-3 p-3 mt-0 listing_con ">
         
         <% for(let dt of data){ %>
-            <a href="/listings/<%= dt._id%>">
+            <a id="listing_a" href="/listings/<%= dt._id%>" >
                 <div class="card col card-listing" styel="width:18rem">
-                    <img src="<%= dt.image.url%>" 
+                    <img src="<%= dt.Images[0]%>" 
                        class="card-img-top" 
                        alt="listing-iamge" 
-                       style="height:18rem"
-                    >
-                    <div class="card-img-overlay"></div>
+                       style="height:18rem">
+                    <div class="listing_like">
+                        <% let check = currUser && currUser.wishlist.includes(dt._id) ? "red" : "" %>
+                        <i class="fa-solid fa-heart heart_icon <%= check%> " id ="<%= dt._id%>"  ></i>
+                    </div>
+                    <div class="card-img-overlay"> </div>
                     <div class="card-body">
                       <p class="card-text">
                          <b><%= dt.title%></b>
@@ -100,6 +142,7 @@
             </a>
             
         <%}%>
+
     </div>
 </body>
 
@@ -120,6 +163,7 @@
 
         }
     });
+
 </script>
 
 
