--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,31 +1,34 @@
 <% layout('layout/boiler') -%>
 
-<h2 class="col-8 offset-3 mt-3">Login</h2>
-<div class="row">
-    <div class="col-8 offset-3" >
+<div class="p-3 m-3 ">
+    <h5 class=" col-6 offset-lg-3 text-center bold-text ">Login</h5>
+    <hr class="col-6 offset-lg-3">
+    <h2 class=" col-6 offset-lg-3 bold-text ">Welcome to Wanderlust</h2>
+    <div class="row">
+        <div class=" col-6 offset-lg-3 " >
 
-        <form action="/login"  method="POST" class="needs-validation" novalidate>
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text"
+            <form action="/login"  method="POST" class="needs-validation" novalidate>
+                <div class="mb-3">
+                   <label for="username" class="form-label">Username</label>
+                   <input type="text"
                    name="username"  
                    class="form-control"
                    id="username"
                    required
-                >
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password"
-                   name="password"  
-                   class="form-control"
-                   id="password"
-                   required
-                >
-                
-            </div>
-            <button class="btn btn-success">Login</button>
-        </form>
+                   >
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password"
+                    name="password"  
+                    class="form-control"
+                    id="password"
+                    required
+                    >
+                </div>
+                <button class="btn btn-success">Login</button>
+            </form>
 
-    </div>
+        </div>
+    </div>  
 </div>
