--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -1,41 +1,42 @@
 <% layout('layout/boiler') -%>
 
-<h2 class="col-8 offset-3 mt-3">SignUp For Wanderlust</h2>
-<div class="row">
-    <div class="col-8 offset-3" >
+<div class="p-3 m-3">
+    <h5 class="col-6 offset-lg-3 mt-3 text-center bold-text">SignUp </h5>
+    <hr class="col-6 offset-lg-3">
+    <h2 class="col-6 offset-lg-3 bold-text">Welcome to Wanderlust</h2>
+    <div class="row">
+        <div class="col-6 offset-lg-3" >
 
-        <form action="/signup"  method="POST" class="needs-validation" novalidate>
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text"
-                   name="username"  
-                   class="form-control"
-                   id="username"
-                   required>
-                <div class="valid-feedback">Looking Good !</div>
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email"
-                   name="email"  
-                   class="form-control"
-                   id="email"
-                   required
-                >
-                
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password"
-                   name="password"  
-                   class="form-control"
-                   id="password"
-                   required
-                >
-                
-            </div>
-            <button class="btn btn-success">signup</button>
-        </form>
-
+            <form action="/signup"  method="POST" class="needs-validation" novalidate>
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text"
+                     name="username"  
+                    class="form-control"
+                    id="username"
+                    required>
+                    <div class="valid-feedback">Looking Good !</div>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Enter Email</label>
+                    <input type="email"
+                       name="email"  
+                       class="form-control"
+                       id="email"
+                      required
+                    >
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Create a Password</label>
+                    <input type="password"
+                      name="password"  
+                      class="form-control"
+                      id="password"
+                       required
+                    >
+                </div>
+                <button class="btn btn-success">Create a account</button>
+            </form>
+        </div>
     </div>
 </div>
